# proyect-vr-pandasz

./: ESTADO.md  PLan modulo camara alvr.md  actulizar plan.md  conversacion claude.txt  decode_log.txt
cliente_vr_pandasz/: Cargo.toml  build.rs  log guardado .txt  wrapper.h
cliente_vr_pandasz/src/: camara.rs  lib.rs  renderer.rs
python/: prueba.py  receptor_pc.py
